[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/gameplay/Qbit_view/sphere_view/BlochSphere2D.gd" type="Script" id=1]
[ext_resource path="res://src/gameplay/Qbit_view/sphere_view/BlochSphere.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/InGameUI/sphereView/undefinedSphereBanner.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Orkney/Orkney Bold.otf" type="DynamicFontData" id=4]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.301961, 0.419608, 0.52549, 1 )
background_energy = 3.48
ambient_light_color = Color( 0.301961, 0.419608, 0.52549, 1 )
ambient_light_energy = 0.78
ambient_light_sky_contribution = 0.29

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 200
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="BlochSphere2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 700, 700 )
world = SubResource( 2 )
transparent_bg = true

[node name="BlochSphere" parent="Viewport" instance=ExtResource( 2 )]

[node name="BlochSphereSprite" type="Sprite" parent="."]
position = Vector2( 57, 0 )
rotation = 8.74228e-08
scale = Vector2( 0.5, -0.5 )
centered = false
offset = Vector2( -225, -650 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.337255, 0.619608, 0.823529, 0.211765 )
margin_right = 254.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndefinedSphereSprite" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.301961, 0.301961, 0.301961, 1 )
position = Vector2( -16.8179, -10.0908 )
scale = Vector2( 1.12731, 0.921942 )
texture = ExtResource( 3 )
centered = false

[node name="QuestionMarkLabel" type="Label" parent="UndefinedSphereSprite"]
margin_top = -1.0
margin_right = 252.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.337255, 0.615686, 0.976471, 1 )
text = "?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZeroLabel" type="Label" parent="."]
margin_left = 154.0
margin_top = 41.9831
margin_right = 209.0
margin_bottom = 79.9831
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "|0>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 208.0
margin_right = 183.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "|1>"
__meta__ = {
"_edit_use_anchors_": false
}
